@@ -22,8 +22,6 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 
-import javax.faces.convert.ConverterException;
-
 import org.easymock.EasyMock;
 import org.goobi.beans.Process;
 import org.junit.Test;
@@ -43,7 +41,7 @@ public class ProcessConverterTest {
     @Test
     public void testGetAsObject() {
         Process process = new Process();
-        process.setId(new Integer(1));
+        process.setId(Integer.valueOf(1));
         PowerMock.mockStatic(ProcessManager.class);
         EasyMock.expect(ProcessManager.getProcessById(1)).andReturn(process);
         EasyMock.expectLastCall();
@@ -52,11 +50,6 @@ public class ProcessConverterTest {
         ProcessConverter conv = new ProcessConverter();
         Object fixture = conv.getAsObject(null, null, "1");
         assertNotNull(fixture);
-        String zero = (String) conv.getAsObject(null, null, "NAN");
-        assertEquals("0", zero);
-
-        String nullValue = (String) conv.getAsObject(null, null, null);
-        assertNull(nullValue);
     }
 
     @Test
@@ -67,16 +60,8 @@ public class ProcessConverterTest {
         ProcessConverter conv = new ProcessConverter();
         String value = conv.getAsString(null, null, process);
         assertEquals("42", value);
-        value = conv.getAsString(null, null, "test");
-        assertEquals("test", value);
 
         String nullValue = conv.getAsString(null, null, null);
         assertNull(nullValue);
-    }
-
-    @Test(expected = ConverterException.class)
-    public void testConverterException() {
-        ProcessConverter conv = new ProcessConverter();
-        conv.getAsString(null, null, 1);
     }
 }
